cmake_minimum_required(VERSION 3.27)

project(my_c_exercises C)

set(CMAKE_C_STANDARD 11)

add_executable(ex1 ex1.c)
add_executable(ex2 ex2.c)
add_executable(ex3 ex3.c)
add_executable(ex4 ex4.c)
add_executable(ex5 ex5.c)
add_executable(ex6 ex6.c)
add_executable(ex7 ex7.c
        ex7.c)
add_executable(ex8 ex8.c
        ex8.c)
add_executable(ex9 ex9.c
        ex9.c)
